--- a/index.html
+++ b/index.html
@@ -25,17 +25,25 @@
           class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top"
           id="mainNav">
           <div class="container">
-            <!-- Botón hamburguesa -->
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarNav"
-              aria-controls="navbarNav"
-              aria-expanded="false"
-              aria-label="Toggle navigation">
-              <i class="fas fa-bars"></i>
-            </button>
+            <div class="container-logo-mobile">
+              <div class="logo-container">
+                <a class="navbar-brand" href="/">
+                  <img
+                    src="/assets/images/logoMobile.png"
+                    alt="Logo Restaurante Cipriano"
+                    width="100" />
+                </a>
+              </div>
+
+              <!-- Botón hamburguesa -->
+              <button
+                class="navbar-toggler"
+                type="button"
+                id="sidebarToggle"
+                aria-label="Toggle navigation">
+                <i class="fas fa-bars text-white"></i>
+              </button>
+            </div>
 
             <!-- Links -->
             <div
@@ -80,7 +88,7 @@
               <i class="fas fa-times"></i>
             </button>
             <img
-              src="/assets/images/logoSinFondo.svg"
+              src="/assets/images/logoCompleto.png"
               alt="Logo Restaurante Cipriano"
               width="120"
               class="my-4" />
@@ -93,7 +101,9 @@
                 >
               </li>
               <li>
-                <a href="/pages/menu.html"><i class="fas fa-utensils me-2"></i>Menú</a>
+                <a href="/pages/menu.html"
+                  ><i class="fas fa-utensils me-2"></i>Menú</a
+                >
               </li>
               <li>
                 <a href="/pages/contacto.html"
@@ -107,7 +117,9 @@
               </li>
             </ul>
             <div class="sidebar-footer">
-              <a href="/pages/reservas.html" class="btn-reserva-sidebar">Reservar Mesa</a>
+              <a href="/pages/reservas.html" class="btn-reserva-sidebar"
+                >Reservar Mesa</a
+              >
               <div class="social-sidebar mt-4">
                 <a href="#" class="me-3"><i class="fab fa-facebook-f"></i></a>
                 <a href="#" class="me-3"><i class="fab fa-instagram"></i></a>
@@ -121,7 +133,7 @@
         <div class="hero">
           <div class="overlay"></div>
           <img
-            src="assets/images/hero-image.jpg"
+            src="assets/images/hero-image.png"
             alt="Hero Image"
             class="img-fluid" />
           <div class="hero-content">
@@ -211,7 +223,7 @@
         <div class="row">
           <div class="col-md-4 mb-4">
             <h5>Restaurante Cipriano</h5>
-            <p>Calle Principal 123<br />Ciudad, CP 28000</p>
+            <p>Calle 1234<br />Valledupar, Cesar</p>
           </div>
           <div class="col-md-4 mb-4">
             <h5>Horario</h5>
